[gd_scene load_steps=7 format=3 uid="uid://bwjq3ofoxjyws"]

[ext_resource type="Script" path="res://Scripts/Story_Scripts/intro_scene.gd" id="1_av3xs"]
[ext_resource type="Texture2D" uid="uid://cvdb7bxymj66h" path="res://Assets/NPC_Art/Claire_Art/Claire_Face_01_Eyes_Open_Happy.png" id="3_2r4vx"]
[ext_resource type="Texture2D" uid="uid://svkmewnyfoi5" path="res://Assets/NPC_Art/Eternos_Art/Eternos_Face_01_Normal.png" id="4_6mhfl"]
[ext_resource type="AudioStream" uid="uid://b07iui4lnttug" path="res://Music/Eternos.mp3" id="6_ok1ul"]
[ext_resource type="Texture2D" uid="uid://274pietux8c4" path="res://Assets/Location_Art/Static/VoidBg01.png" id="7_m53bl"]
[ext_resource type="AudioStream" uid="uid://twxkt0gmdfno" path="res://Music/Claire_music.mp3" id="7_wcavx"]

[node name="Intro_Scene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_av3xs")

[node name="Body_Claire" type="Sprite2D" parent="."]
position = Vector2(-531, 378)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_2r4vx")

[node name="DialogueHolder" type="ColorRect" parent="."]
z_index = 10
layout_mode = 0
offset_left = 40.0
offset_top = 396.0
offset_right = 1104.0
offset_bottom = 627.0
color = Color(0.160784, 0.160784, 0.160784, 0.815686)

[node name="Next_Button" type="Button" parent="DialogueHolder"]
layout_mode = 0
offset_left = 932.0
offset_top = 172.0
offset_right = 1108.0
offset_bottom = 253.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 46
text = "Next"

[node name="RichTextLabel" type="RichTextLabel" parent="DialogueHolder"]
layout_mode = 0
offset_left = 13.0
offset_top = 9.0
offset_right = 1056.0
offset_bottom = 192.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/normal_font_size = 28
bbcode_enabled = true
text = "hiii"

[node name="Body" type="Sprite2D" parent="."]
position = Vector2(562, 286)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_6mhfl")

[node name="EternosMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_ok1ul")
volume_db = 18.0

[node name="ClaireMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_wcavx")
volume_db = 18.0

[node name="Bg" type="Sprite2D" parent="."]
z_index = -100
position = Vector2(564, 347)
texture = ExtResource("7_m53bl")

[connection signal="button_up" from="DialogueHolder/Next_Button" to="." method="_on_next_button_button_up"]
